# particlesimul

./: Cargo.toml
src/: compute.rs  lib.rs  main.rs  particle.rs  scenedata.rs
