[package]
name = "particlesimul"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_pancam = "0.11.1"
env_logger = ">=0.10"
log = ">=0.4"
rand = "0.8.5"
ultraviolet = "0.9.2"
wgpu = ">=0.19.3"
winit = "0.30.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
